<resources>
    <string name="app_name">Productivity buddy</string>
    <string name="password">Password</string>
    <string name="here">Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text2">I have an account already. login</string>
    <!--  change this placeholder text -->
    <!--timer -->
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="habit">Habit</string>
    <string name="today">Today</string>
    <string name="Habit">Habit</string>
    <string name="create_something">Create something</string>
    <string name="Task">Task</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="description_optional">Description(optional)</string>
    <string name="define_your_habit">Define your Habit</string>
    <string name="create_a_task">Create a new Task</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="themes">Themes</string>
    <string name="logout">Logout</string>
    <string name="define_your_habits">Define your habits</string>
    <string name="task">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_task">Create a new Task</string>

</resources>