<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:src="@drawable/ic_back_24"
            android:padding="14dp"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:src="@drawable/undraw_male_avatar_re_y880"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="Your name"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:text="your email"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bckground"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/bell_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bell_background"
                        android:src="@drawable/bell_regular"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/notifications"
                        android:layout_toEndOf="@+id/bell_icon"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:shadowColor="@color/teal_200"
                       />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bckground"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/theme_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bell_background"
                        android:src="@drawable/chart_line"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="Progress"
                        android:layout_toEndOf="@+id/theme_icon"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_arrow_right_24"
                        android:padding="12dp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bckground"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/exclame_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bell_background"
                        android:src="@drawable/exclamation_solid"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/about"
                        android:layout_toEndOf="@+id/exclame_icon"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="12sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_arrow_right_24"
                        android:padding="12dp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="100sp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/logoutbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bell_background"
                        android:text="@string/logout" />

                </RelativeLayout>
            </LinearLayout>




        </LinearLayout>
       </ScrollView>

</LinearLayout>